--- a/public/src/app-footer/app-footer.html
+++ b/public/src/app-footer/app-footer.html
@@ -30,11 +30,10 @@
                     <div class="footer__block">
                         <div class="footer__title">Disclaimer</div>
 
-                        <div>Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat
-                            porttitor ligula, eget lacinia odio sem nec elit. Donec sed odio dui. Maecenas sed diam eget
-                            risus varius blandit sit amet non magna. Sed posuere consectetur est at lobortis. Lorem ipsum
-                            dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas
-                            eget quam.</div>
+                        <div>The Property Buying Company is not responsible for, and expressly disclaims all liability for, damages
+                            of any kind arising out of use, reference to, or reliance on any information contained within
+                            the site. While the information contained within the site is periodically updated, no guarantee
+                            is given that the information provided in this website is correct, complete and up-to-date. </div>
                     </div>
                 </div>
             </div>
@@ -44,7 +43,7 @@
             <div class="container">
                 <span class="footer__copyright">© Realty</span>
                 <a route-href="route: tnc">Terms &amp; Conditions</a>
-                <a href="">Privacy Policy</a>
+                <a route-href="route: policy">Privacy Policy</a>
                 <span style="float:right">Powered by <a href="http://razrlab.com">RAZRLAB</a></span>
             </div>
 
