--- a/public/src/faq/faq.html
+++ b/public/src/faq/faq.html
@@ -4,7 +4,6 @@
         <div class="container">
             <header class="section__title">
                 <h2>Frequently Asked Questions</h2>
-                <small>Duis mollis estnon commodo luctus nisierat porttitor ligula eget lacinia odio semnec</small>
             </header>
 
             <div class="row">
@@ -42,7 +41,7 @@
                             <h2>How do I know if I am getting a fair price for my property?</h2>
                         </div>
                         <div class="card__body">
-                            Fair trade is at the core of xxx. Time is also money and it must be factored in the transaction. Allow us to make an offer and find out.
+                            Fair trade is at the core of The Property Buying Company. Time is also money and it must be factored in the transaction. Allow us to make an offer and find out.
                         </div>
                     </div>
 
@@ -60,7 +59,7 @@
                             <h2>How long does the entire process take?</h2>
                         </div>
                         <div class="card__body">
-                            The average time to conclude the transaction is usually 2 – 3 weeks. In some cases, we have concluded the transaction in 7 days. Having said that, xxx will work with you to complete the entire process within the timeline ideal to you. 
+                            The average time to conclude the transaction is usually 2 – 3 weeks. In some cases, we have concluded the transaction in 7 days. Having said that, The Property Buying Company will work with you to complete the entire process within the timeline ideal to you. 
                         </div>
                     </div>
                     <div class="card faq__item">
@@ -68,7 +67,7 @@
                             <h2>How quick will I get an offer on my property?</h2>
                         </div>
                         <div class="card__body">
-                            Less than 24hrs. Submit your property on our portal or call us on xxxx for our offer. 
+                            Less than 24hrs. Submit your property on our portal or call us on The Property Buying Company for our offer. 
                         </div>
                     </div>
                     <div class="card faq__item">
@@ -76,23 +75,14 @@
                             <h2>What type of properties do you buy?</h2>
                         </div>
                         <div class="card__body">
-                           Xxx buys the following types of property: Independent Villas, Townhouses, Apartments. Commercial property and land will be on a case by case basis. 
-                        </div>
-                    </div>
-
-                    <div class="card faq__item">
-                        <div class="card__header">
-                            <h2>I live in an ex council house. Can I still use your service?</h2>
-                        </div>
-                        <div class="card__body">
-                            Yes we can buy ex council houses.
+                           The Property Buying Company buys the following types of property: Independent Villas, Townhouses, Apartments. Commercial property and land will be on a case by case basis. 
                         </div>
                     </div>
 
 
                     <div class="card faq__item">
                         <div class="card__header">
-                            <h2>Which areas does xxx cover?</h2>
+                            <h2>Which areas does The Property Buying Company cover?</h2>
                         </div>
                         <div class="card__body">
                             All freehold and leasehold areas in the United Arab Emirates. 
@@ -107,7 +97,6 @@
                     <form class="card">
                         <div class="card__header">
                             <h2>Write to us</h2>
-                            <small>Aeneanquam ellentesque ornare lacinia</small>
                         </div>
 
                         <div class="card__body m-t-10">
