--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="col-sm-12 col-md-8">
                         <div class="info-box__item">
-                            <h3>Your First Step to a Brighter Future</h3>
+                            <h3>Your First Step to a Brighter Future With Us</h3>
                             <p>
                                 At The Property Buying Company, we understand that you can have a number of reasons to sell your property quickly. Be it
                                 to attain financial freedom or to invest in a new property, we are a Company you can rely
@@ -48,10 +48,13 @@
         </section>
         <section class="section info-box" style="background:#F3F3F3">
             <div class="container">
+                <div class="info-box__item">
+                    <h3>Why Sell to Us</h3>
+                </div>
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="info-box__item">
-                            <img class="img-responsive" src="img/quickCash.png" alt=""  height="300">
+                            <img class="img-responsive" src="img/quickCash.png" alt="" height="300">
 
                             <h3>Quick Cash</h3>
                             <p>Be it for another property or investment, or any other reason, we are here to provide the quick
@@ -84,6 +87,9 @@
         </section>
         <section class="section info-box">
             <div class="container">
+                <div class="info-box__item">
+                    <h3>Benefits of Working With Us</h3>
+                </div>
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="info-box__item">
@@ -122,7 +128,7 @@
 
         <section class="section" style="text-align: center;">
             <div class="container">
-                <h3>The Typical Selling Process</h3>
+                <h3>The Typical Selling Process Without Us</h3>
             </div>
         </section>
         <section id="cd-timeline" class="cd-container">
@@ -281,9 +287,16 @@
         <!-- cd-timeline -->
         <section class="section" style="text-align: center;">
             <div class="container">
-                <h3>The Property Buying Company can complete this entire transaction within 2-3 weeks by paying you your final
-                    asking price of AED 800,000</h3>
-                <h3>A massive potential saving of AED 49,000 and 5 months’ worth of time!</h3>
+                <div class="row card-item">
+                    <div class="col-sm-12 col-md-9">
+                        <h3 class="white-text">The Property Buying Company can complete this entire transaction within 2-3 weeks by paying you your
+                            final asking price of AED 800,000</h3>
+                        <h3 class="white-text">A massive potential saving of AED 49,000 and 5 months’ worth of time!</h3>
+                    </div>
+                    <div class="col-sm-12 col-md-3">
+                         <img class="img-responsive" src="img/rich.png" alt="" width="300" height="300">
+                    </div>
+                </div>
             </div>
         </section>
         <a class="btn brn-sm btn-default btn-static" style="position: fixed; bottom: 75%; right: 0px;" route-href="route: submit">SELL NOW</a>
