--- a/public/src/tnc/tnc.html
+++ b/public/src/tnc/tnc.html
@@ -6,94 +6,39 @@
                     <h2>Terms &amp; Conditions</h2>
                 </div>
                 <div class="card__body">
-                    <p>Before you instruct us to act in the sale of your property, we wish to draw your attention to our Terms
-                        of Business. The Property Buying Company can offer an average completion timescale for a standard
-                        property purchase is 3 to 4 weeks subject to survey. We have however completed purchases in as little
-                        as 7 days.
-                    </p>
-                    <p>
-                        A valuation of the property will be instructed prior to the sale being completed at our cost by independent RICS surveyor.
-                        We also often also instruct a high street estate agent to give us a market appraisal for your property
-                        too.
-                    </p>
-                    <p>
-                        Should it be necessary, we will also acquire a builders report at our discretion together with additional searches against
-                        the property as necessary.
-                    </p>
-                    <p>
-                        As we are a trade buyer of properties we do not pay the full market value of a property. The price we can pay for a property
-                        depends on the property type, area, condition, age and construction type and is subject to final
-                        valuation of which up to 80% of the property value is paid.
-                    </p>
-                    <p>
-                        Our initial offer is conditional upon final survey and is subject to any adverse entries being revealed in the searches carried
-                        out against the property and any other matters which are subsequently revealed to us which would
-                        affect the market value of the property.
-                    </p>
-                    <p>
-                        Money Laundering Compliance is required by law and will be carried out as standard and on entering into the Agreement and
-                        accepting our Terms of Business you are consenting to such a check being carried out.
-                    </p>
-                    <p>
-                        We will not without your consent release or misuse confidential information given by you during the property sale process
-                        unless legally required to do so.
-                    </p>
-                    <p>
-                        We will keep clear records of all transactions for a period of 6 years.
-                    </p>
-                    <p>
-                        You are free to use any solicitor of your choice. However, if you choose to use our recommended solicitor then we will cover
-                        your fees in relation to the sale of the property. The reason that we recommend you to use our recommended
-                        solicitor is because we are dealing with multiple transactions at any one time and to work towards
-                        a desired timescale or completion date. Our recommended solicitors are independent and abide by all
-                        Law Society guidelines and are acting on an independent basis for you the client.
-                    </p>
-                    <p>
-                        Our Agreement will remain in force for a period of 4 months from the date of the Agreement signed by you.
-                    </p>
-                    <p>
-                        Should the Agreement be terminated within the 4 month period then we will be at liberty to register a Unilateral Notice against
-                        the property at HM Land Registry to restrict the sale of the property within the period in which
-                        the Agreement is in force to protect our interest.
-                    </p>
-                    <p>
-                        You are free to use any solicitor of your choice. However, if you choose to use our recommended solicitor then we will cover
-                        your fees in relation to the sale of the property. The reason that we recommend We will prior to
-                        entering into the Agreement verify the property information provided is correct including the ability
-                        of the Seller to sell the property without consent of any other person. to use our recommended solicitor
-                        is because we are dealing with multiple transactions at any one time and to work towards a desired
-                        timescale or completion date. Our recommended solicitors are independent and abide by all Law Society
-                        guidelines and are acting on an independent basis for you the client.
-                    </p>
-                    <p>
-                        The Agreement can be cancelled within the 14 day cooling off period from the date the contract was entered into.
-                    </p>
-                    <p>
-                        We will try to solve any disagreements or complaints quickly and efficiently and will acknowledge receipt of any complaint
-                        within 3 days together with a full response within 15 days. Should you wish to make a complaint please
-                        do so in writing and a response will be provided as above. If, after following our formal complaints
-                        procedure (above), you are dissatisfied with the responses from us you can direct any complaint to
-                        The Property Ombudsman.
-                    </p>
-                    <p>
-                        The Property Buying Company are members agents of The Property Ombusdman scheme for dispute resolution and we are bound by
-                        their code of practice.
-                    </p>
-                    <p>
-                        We will not discriminate against any person under the definitions of the Sex Discrimination Act 1975 or the Race Relations
-                        Act 1976. We will not discriminate, or threaten to discriminate against any prospective Buyer of
-                        your property because that person refuses to agree that we will (directly or indirectly) provide
-                        services to them.
-                    </p>
-                    <p>
-                        Initial valuations are based on an analysis of recent transactions registered with the Land Registry and similar properties
-                        within the property area, additional factors such as décor and appearance are also taken into account.
-                        Valuations are only a recommendation to the vendor and are subject to full survey.
-                    </p>
-                    <p>
-                        If the agreement is terminated within the Agreement term by the seller then we will be entitled to be reimbursed for all
-                        costs and expenses incurred by us to a maximum of £750.00 which will be chargeable at our discretion.
-                    </p>
+                    <p>The Property Buying Company offers usually follow the average timescale of 2 – 3 Weeks. However, in some
+                        cases, we have completed the transaction within 7 days. </p>
+
+                    <p>The Property Buying Company reserves the right to have a certified valuation conducted on your property.
+                        </p>
+
+                    <p>The Property Buying Company reserves the right to seek additional reports, certificates, prior to concluding
+                        the transaction. </p>
+
+                    <p>The offer made by The Property Buying Company may not always be market price. Our offer depends on property
+                        type, condition, age, etc. It is important to note here that time saved and headache-free experience
+                        in selling your property is very significant. </p>
+
+                    <p>Our initial offer is conditional upon final survey. Our offer may change if your property has any unfavourable
+                        condition – structural or otherwise. </p>
+
+                    <p>Unless we are legally bound by a court order, all information about you, your transaction and any other
+                        information we may have through your interaction with The Property Buying Company, we will not release
+                        or misuse this information without your express consent. </p>
+
+
+                    <p>Our Agreement will remain in force for a period of 3 months from the date of signing. </p>
+
+                    <p>Breach of terms will be subject to the rules of the real estate regulators in the respective emirates.
+                        </p>
+
+                    <p>Our offers are based on an analysis of recent transactions registered with the land registrars in the
+                        respective emirates. The Property Buying Company will take into consideration the upkeep of your
+                        property as well as the community. </p>
+
+                    <p>If the agreement is terminated within the Agreement term by the seller, the seller agrees to reimburse
+                        for all costs incurred to a maximum amount of AED 3,000. </p>
+
                 </div>
             </div>
         </div>
