--- a/public/src/app-header/app-header.html
+++ b/public/src/app-header/app-header.html
@@ -126,10 +126,16 @@
         <div class="header__main">
             <div class="container">
                 <a class="logo" href="index.html">
-                    <!-- <img src="img/logo.png" alt=""> -->
                     <div class="logo__text">
-                        <span>Realty</span>
-                        <span>This is a placeholder for the logo</span>
+                        <div class="row">
+                            <div class="col-sm-3 col-xs-3">
+                                <img src="/img/sheikh.png" width="75">
+                            </div>
+                            <div class="col-sm-9 col-xs-9">
+                                <img src="/img/logo.png" width="250">
+                                <span>This is a placeholder for the logo</span>
+                            </div>
+                        </div>
                     </div>
                 </a>
 
@@ -184,7 +190,7 @@
                         </ul>
                     </li> -->
 
-                    <li  class="navigation__dropdown"><a route-href="route: contact" id="contact-link">Contact</a></li>
+                    <li class="navigation__dropdown"><a route-href="route: contact" id="contact-link">Contact</a></li>
 
                     <!-- <li class="navigation__dropdown">
                         <a href="" class="prevent-default">More</a>
@@ -203,7 +209,7 @@
                         </ul>
                     </li> -->
 
-                    <li  class="navigation__dropdown"><a route-href="route: faq" id="faq-link">FAQ</a></li>
+                    <li class="navigation__dropdown"><a route-href="route: faq" id="faq-link">FAQ</a></li>
                 </ul>
             </div>
         </div>
