adding new changes

--- a/public/src/app-header/app-header.html
+++ b/public/src/app-header/app-header.html
@@ -129,10 +129,10 @@
                     <div class="logo__text">
                         <div class="row">
                             <div class="col-sm-3 col-xs-3">
-                                <img src="/img/sheikh.png" width="75">
+                                <img src="/img/sheikh.png" width="75" class="img-responsive">
                             </div>
                             <div class="col-sm-9 col-xs-9">
-                                <img src="/img/logo.png" width="250">
+                                <img src="/img/logo.png" width="250" class="img-responsive">
                                 <span>This is a placeholder for the logo</span>
                             </div>
                         </div>
