--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -294,5 +294,5 @@
                 </div>
             </div>
         </section>
-        <a class="btn brn-sm btn-default btn-static" style="position: fixed; bottom: 75%; right: 0px; border-radius:100px;padding: 3px;" route-href="route: submit"><img src="img/sellnow.png"></a>
+        <a class="btn brn-sm btn-default btn-static" style="position: fixed; bottom: 75%; right: 0px; border-radius:100px;padding: 3px;" route-href="route: submit"><img src="img/sellnow.png" class="img-responsive"></a>
 </template>
