--- a/public/src/submit/submit.html
+++ b/public/src/submit/submit.html
@@ -11,51 +11,13 @@
                 <ul class="submit-property__steps">
                     <li class="active"><a href="#submit-property-1" data-toggle="tab">1</a></li>
                     <li><a href="#submit-property-2" data-toggle="tab">2</a></li>
-                    <li><a href="#submit-property-3" data-toggle="tab">3</a></li>
-                    <li><a id="submitted" href="#submit-property-4">4</a></li>
+                    <li><a id="submitted" href="#submit-property-3">3</a></li>
 
                     <li class="submit-property__caret"></li>
                 </ul>
 
                 <div class="tab-content submit-property__content">
                     <div class="tab-pane fade in active" id="submit-property-1">
-                        <div class="card">
-                            <div class="card__header">
-                                <h2>Property Location</h2>
-                                <small>Please fill up the location information of the property.</small>
-                            </div>
-
-                            <form class="card__body">
-                                <div class="form-group form-group--float m-b-5">
-                                    Address
-                                    <input type="text" class="form-control text-center" value.bind="model.location.address">
-                                    <i class="form-group__bar"></i>
-                                </div>
-
-                                <div class="form-group form-group--float m-b-5">
-                                    Unit/Floor/Block
-                                    <input type="text" class="form-control text-center" value.bind="model.location.unit">
-                                    <i class="form-group__bar"></i>
-                                </div>
-
-                                <div class="form-group">
-                                    <div class="checkbox">
-                                        <label>
-                                                <input type="checkbox" checked.bind="model.location.currentlyLiving">
-                                                <i class="input-helper"></i>
-                                                I currently live here
-                                            </label>
-                                    </div>
-                                </div>
-
-                                <a data-toggle="tab" class="btn btn--circle btn-primary submit-property__button" click.delegate="validateStep(1)">
-                                        <i class="zmdi zmdi-long-arrow-right"></i>
-                                    </a>
-                            </form>
-                        </div>
-                    </div>
-
-                    <div class="tab-pane fade" id="submit-property-2">
                         <div class="card">
                             <div class="card__header">
                                 <h2>Contact Information</h2>
@@ -89,14 +51,39 @@
                             </form>
                         </div>
                     </div>
-                    <div class="tab-pane fade" id="submit-property-3">
-                        <div class="card">
+
+                    <div class="tab-pane fade" id="submit-property-2">
+                          <div class="card">
                             <div class="card__header">
                                 <h2>Property Information</h2>
                                 <small>Please fill up information about the property.</small>
                             </div>
 
                             <form class="card__body">
+
+
+                                   <div class="form-group form-group--float m-b-5">
+                                    Area and Community
+                                    <input type="text" class="form-control text-center" value.bind="model.location.address">
+                                    <i class="form-group__bar"></i>
+                                </div>
+
+                                <div class="form-group form-group--float m-b-5">
+                                    Unit/Floor/Block
+                                    <input type="text" class="form-control text-center" value.bind="model.location.unit">
+                                    <i class="form-group__bar"></i>
+                                </div>
+
+                                <div class="form-group">
+                                    <div class="checkbox">
+                                        <label>
+                                                <input type="checkbox" checked.bind="model.location.currentlyLiving">
+                                                <i class="input-helper"></i>
+                                                I currently live here
+                                            </label>
+                                    </div>
+                                </div>
+
                                 <div class="form-group">
                                     <label>Property Type</label>
 
@@ -108,13 +95,13 @@
                                         </select>
                                 </div>
 
-                                <div class="form-group form-group--float form-group--float-center">Property title
+                                <div class="form-group form-group--float form-group--float-center">Title Deed Number
                                     <input type="text" class="form-control text-center" value.bind="model.information.title">
                                     <i class="form-group__bar"></i>
                                 </div>
 
-                                <div class="form-group form-group--float form-group--float-center">Description
-                                    <textarea class="form-control text-center textarea-autoheight" value.bind="model.information.description"></textarea>
+                                <div class="form-group form-group--float form-group--float-center">View
+                                    <textarea class="form-control text-center textarea-autoheight" value.bind="model.information.view"></textarea>
                                     <i class="form-group__bar"></i>
                                 </div>
 
@@ -123,9 +110,9 @@
                                     <input type="text" class="form-control text-center" value.bind="model.information.squareFeet">
                                     <i class="form-group__bar"></i>
                                 </div>
-
-                                <div class="form-group form-group--float form-group--float-center">Year Built
-                                    <input type="numeric" class="form-control text-center" value.bind="model.information.year">
+                                
+                                <div class="form-group form-group--float form-group--float-center">Plot Size (if applicable)
+                                    <input type="text" class="form-control text-center" value.bind="model.information.plotSize">
                                     <i class="form-group__bar"></i>
                                 </div>
 
@@ -238,7 +225,7 @@
                         </div>
                     </div>
 
-                    <div class="tab-pane fade" id="submit-property-4">
+                    <div class="tab-pane fade" id="submit-property-3">
                         <div class="card">
                             <div class="submit-property__success">
                                 <i class="zmdi zmdi-check"></i>
