--- a/public/src/app-footer/app-footer.html
+++ b/public/src/app-footer/app-footer.html
@@ -7,7 +7,8 @@
                     <div class="footer__block">
                         <a class="logo clearfix" href="">
                             <div class="logo__text">
-                                <span>Realty</span>
+                                <!-- <span>Realty</span> -->
+                                 <img src="/img/logo.png" width="250" class="img-responsive">
                                 <span>This is a placeholder for the logo</span>
                             </div>
                         </a>
@@ -17,7 +18,7 @@
                         </address>
 
                         <div class="f-20">0000-000000000</div>
-                        <div class="f-14 m-t-5">contact@realty.com / info@realty.com</div>
+                        <div class="f-14 m-t-5">contact@cashforproperty.ae / info@cashforproperty.ae</div>
 
                         <div class="f-20 m-t-20">
                             <a href="" class="m-r-10"><i class="zmdi zmdi-google"></i></a>
@@ -30,7 +31,7 @@
                     <div class="footer__block">
                         <div class="footer__title">Disclaimer</div>
 
-                        <div>The Property Buying Company is not responsible for, and expressly disclaims all liability for, damages
+                        <div>Cash For Property is not responsible for, and expressly disclaims all liability for, damages
                             of any kind arising out of use, reference to, or reliance on any information contained within
                             the site. While the information contained within the site is periodically updated, no guarantee
                             is given that the information provided in this website is correct, complete and up-to-date. </div>
@@ -41,7 +42,7 @@
 
         <div class="footer__bottom">
             <div class="container">
-                <span class="footer__copyright">© Realty</span>
+                <span class="footer__copyright">© Cash For Property</span>
                 <a route-href="route: tnc">Terms &amp; Conditions</a>
                 <a route-href="route: policy">Privacy Policy</a>
                 <span style="float:right">Powered by <a href="http://razrlab.com">RAZRLAB</a></span>
