--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -12,9 +12,9 @@
 
     <div id="maincontain">
         <section class="section submit-ticker">
-            <p>Are you looking to sell your valuable property? Realty is your destination!</p>
+            <p>Are you looking to sell your valuable property? <img src="/img/logo.png" width="250" class="img-responsive">  is your destination!</p>
 
-            <a route-href="route: submit">Submit your property now!</a>
+            <a route-href="route: submit">Sell your property now!</a>
         </section>
         <section class="section info-box">
             <div class="container">
@@ -28,11 +28,10 @@
                         <div class="info-box__item">
                             <h3>Your First Step to a Brighter Future With Us</h3>
                             <p>
-                                At The Property Buying Company, we understand that you can have a number of reasons to sell your property quickly. Be it
+                                At Cash For Property, we understand that you can have a number of reasons to sell your property quickly. Be it
                                 to attain financial freedom or to invest in a new property, we are a Company you can rely
                                 on to achieve your goals in the quickest possible way. Being the pioneers in Dubai, we understand
-                                the ins and outs of the transactional process which can be cumbersome at times. The Property
-                                Buying Company does not rely on financial institutions – rather, we use our large cash reserve
+                                the ins and outs of the transactional process which can be cumbersome at times. Cash For Property does not rely on financial institutions – rather, we use our large cash reserve
                                 to buy properties. This gives us the ability to buy your property in the shortest period
                                 possible. If this is what you are looking for, <a route-href="route: submit">Sell Your Property Now</a>
                             </p>
@@ -91,7 +90,7 @@
                             <img class="img-responsive" src="img/O9IY331.png" alt="" width="300" height="300">
 
                             <h3>No Fees Whatsoever</h3>
-                            <p>Selling your property can be a costly affair. At The Property Buying Company, we understand this
+                            <p>Selling your property can be a costly affair. At Cash For Property, we understand this
                                 and that’s why, we will bear the cost of all the fees associated with the sale of your property.
                             </p>
                         </div>
@@ -112,7 +111,7 @@
                             <img class="img-responsive" src="img/OAI50P1.png" alt="" width="300" height="300">
 
                             <h3>Best Price to Time Ratio</h3>
-                            <p>The Property Buying Company understands that time is money too. This is factored in the price
+                            <p>Cash For Property understands that time is money too. This is factored in the price
                                 offered. Therefore, our offer will be the best in the market to sell your property in the
                                 shortest time. </p>
                         </div>
@@ -284,7 +283,7 @@
             <div class="container">
                 <div class="row card-item">
                     <div class="col-sm-12 col-md-9">
-                        <h3 class="white-text">The Property Buying Company can complete this entire transaction within 2-3 weeks by paying you your
+                        <h3 class="white-text">Cash For Property can complete this entire transaction within 2-3 weeks by paying you your
                             final asking price of AED 800,000</h3>
                         <h3 class="white-text">A massive potential saving of AED 49,000 and 5 months’ worth of time!</h3>
                     </div>
