--- a/public/src/tnc/tnc.html
+++ b/public/src/tnc/tnc.html
@@ -36,8 +36,7 @@
                         respective emirates. The Property Buying Company will take into consideration the upkeep of your
                         property as well as the community. </p>
 
-                    <p>If the agreement is terminated within the Agreement term by the seller, the seller agrees to reimburse
-                        for all costs incurred to a maximum amount of AED 3,000. </p>
+                    <p>If the agreement is terminated within the Agreement term by the seller, the seller agrees to a penalty of 10% of the offered price. </p>
 
                 </div>
             </div>
