--- a/public/src/app-header/app-header.html
+++ b/public/src/app-header/app-header.html
@@ -117,7 +117,7 @@
                         <a href=""><i class="zmdi zmdi-google"></i></a>
                     </li>
 
-                    <li class="pull-right hidden-xs"><span><i class="zmdi zmdi-email"></i>contact@realty.com</span></li>
+                    <li class="pull-right hidden-xs"><span><i class="zmdi zmdi-email"></i>contact@cashforproperty.com</span></li>
                     <li class="pull-right hidden-xs"><span><i class="zmdi zmdi-phone"></i>Call us now on 000-000-000-0000</span></li>
                 </ul>
             </div>
@@ -168,7 +168,7 @@
                     </li> -->
 
 
-                    <li class="navigation__dropdown"><a route-href="route: submit" id="submit-link">Submit</a></li>
+                    <li class="navigation__dropdown"><a route-href="route: submit" id="submit-link">Sell</a></li>
 
                     <!-- <li class="navigation__dropdown">
                         <a href="mortgage.html">Mortgages</a>
