--- a/public/src/faq/faq.html
+++ b/public/src/faq/faq.html
@@ -22,7 +22,7 @@
                             <h2>If needed, would somebody be available for a meeting?</h2>
                         </div>
                         <div class="card__body">
-                            Yes. We would be more than happy to meet with you to make an offer on your property. Contact us today to arrange an appointment
+                            Yes. We would be more than happy to meet with you to make an offer* on your property. Contact us today to arrange an appointment
                             for one of our representatives to come out and see you.
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                             <h2>How do I know if I am getting a fair price for my property?</h2>
                         </div>
                         <div class="card__body">
-                            Fair trade is at the core of The Property Buying Company. Time is also money and it must be factored in the transaction. Allow us to make an offer and find out.
+                            Fair trade is at the core of Cash For Property. Time is also money and it must be factored in the transaction. Allow us to make an offer* and find out.
                         </div>
                     </div>
 
@@ -50,7 +50,7 @@
                             <h2>How do you calculate the value of my property?</h2>
                         </div>
                         <div class="card__body">
-                            We use our collective experience of 30 years and our extensive knowledge of local markets. We use our proprietary system that provides us with the most up-to-date data to help us to offer you a fair price.
+                            We use our collective experience of 30 years and our extensive knowledge of local markets. We use our proprietary system that provides us with the most up-to-date data to help us to offer* you a fair price.
                         </div>
                     </div>
 
@@ -59,15 +59,15 @@
                             <h2>How long does the entire process take?</h2>
                         </div>
                         <div class="card__body">
-                            The average time to conclude the transaction is usually 2 – 3 weeks. In some cases, we have concluded the transaction in 7 days. Having said that, The Property Buying Company will work with you to complete the entire process within the timeline ideal to you. 
+                            The average time to conclude the transaction is usually 2 – 3 weeks. In some cases, we have concluded the transaction in 3 days. Having said that, Cash For Property will work with you to complete the entire process within the timeline ideal to you. 
                         </div>
                     </div>
                     <div class="card faq__item">
                         <div class="card__header">
-                            <h2>How quick will I get an offer on my property?</h2>
+                            <h2>How quick will I get an offer* on my property?</h2>
                         </div>
                         <div class="card__body">
-                            Less than 24hrs. Submit your property on our portal or call us on The Property Buying Company for our offer. 
+                            Less than 24hrs. Submit your property on our portal or call us on Cash For Property for our offer*. 
                         </div>
                     </div>
                     <div class="card faq__item">
@@ -75,19 +75,21 @@
                             <h2>What type of properties do you buy?</h2>
                         </div>
                         <div class="card__body">
-                           The Property Buying Company buys the following types of property: Independent Villas, Townhouses, Apartments. Commercial property and land will be on a case by case basis. 
+                           Cash For Property buys the following types of property: Independent Villas, Townhouses and Apartments.
                         </div>
                     </div>
 
 
                     <div class="card faq__item">
                         <div class="card__header">
-                            <h2>Which areas does The Property Buying Company cover?</h2>
+                            <h2>Which areas does Cash For Property cover?</h2>
                         </div>
                         <div class="card__body">
                             All freehold and leasehold areas in the United Arab Emirates. 
                         </div>
                     </div>
+
+                    * Subject to a survery by us
 
 
 
