--- a/public/src/policy/policy.html
+++ b/public/src/policy/policy.html
@@ -6,17 +6,17 @@
                     <h2>Privacy Policy</h2>
                 </div>
                 <div class="card__body">
-                    <p>1. INFORMATION GATHERED BY THEPROPERTYBUYINGCOMPANY.AE: This is thepropertybuyingcompany.ae’s (“thepropertybuyingcompany.ae”)
-                        online privacy policy (“Policy”). This policy applies only to activities thepropertybuyingcompany.ae
-                        engages in on its website and does not apply to thepropertybuyingcompany.ae activities that are “offline”
-                        or unrelated to the website. thepropertybuyingcompany.ae collects certain anonymous data regarding
+                    <p>1. INFORMATION GATHERED BY CASHFORPROPERTY.AE: This is cashforproperty.ae’s (cashforproperty.ae”)
+                        online privacy policy (“Policy”). This policy applies only to activities cashforproperty.ae
+                        engages in on its website and does not apply to cashforproperty.ae activities that are “offline”
+                        or unrelated to the website. cashforproperty.ae collects certain anonymous data regarding
                         the usage of the website. This information does not personally identify users, by itself or in combination
                         with other information, and is gathered to improve the performance of the website. The anonymous
-                        data collected by thepropertybuyingcompany.ae website can include information such as the type of
+                        data collected by cashforproperty.ae website can include information such as the type of
                         browser you are using, and the length of the visit to the website. You may also be asked to provide
-                        personally identifiable information on the thepropertybuyingcompany.ae website, which may include
+                        personally identifiable information on the cashforproperty.ae website, which may include
                         your name, address, telephone number and e-mail address. This information can be gathered when feedback
-                        or e-mails are sent to thepropertybuyingcompany.ae, when you register for services, or make purchases
+                        or e-mails are sent to cashforproperty.ae, when you register for services, or make purchases
                         via the website. In all such cases you have the option of providing us with personally identifiable
                         information.</p>
                     <p>2. USE AND DISCLOSURE OF INFORMATION: Except as otherwise stated below, we do not sell, trade or rent
@@ -24,22 +24,22 @@
                         by our site is used to process your property sale, to keep you informed and for statistical purposes
                         for improving our site. All details and personally identifiable information will NOT be stored, sold,
                         shared, rented or leased to any third parties.</p>
-                    <p>3. COOKIES: Cookies are small bits of data cached in a user’s browser. thepropertybuyingcompany.ae utilises
+                    <p>3. COOKIES: Cookies are small bits of data cached in a user’s browser. cashforproperty.ae utilises
                         cookies to determine whether or not you have visited the home page in the past. However, no other
                         user information is gathered.</p>
-                    thepropertybuyingcompany.ae may use non-personal “aggregated data” to enhance the operation of our website, or analyse interest
-                    in the areas of our website. Additionally, if you provide thepropertybuyingcompany.ae with content for
+                    cashforproperty.ae may use non-personal “aggregated data” to enhance the operation of our website, or analyse interest
+                    in the areas of our website. Additionally, if you provide cashforproperty.ae with content for
                     publishing or feedback, we may publish your user name or other identifying data with your permission.</p>
-                    thepropertybuyingcompany.ae may also disclose personally identifiable information in order to respond to a subpoena, court
-                    order or other such request. thepropertybuyingcompany.ae may also provide such personally identifiable
+                    cashforproperty.ae may also disclose personally identifiable information in order to respond to a subpoena, court
+                    order or other such request. cashforproperty.ae may also provide such personally identifiable
                     information in response to a law enforcement agency’s request or as otherwise required by law. Your personally
-                    identifiable information may be provided to a party if thepropertybuyingcompany.ae files for bankruptcy,
-                    or there is a transfer of the assets or ownership of thepropertybuyingcompany.ae in connection with proposed
+                    identifiable information may be provided to a party if cashforproperty.ae files for bankruptcy,
+                    or there is a transfer of the assets or ownership of cashforproperty.ae in connection with proposed
                     or consummated corporate reorganisations, such as mergers or acquisitions.</p>
-                    <p>4. SECURITY: thepropertybuyingcompany.ae takes appropriate steps to ensure data privacy and security
-                        including through various hardware and software methodologies. However, thepropertybuyingcompany.ae
+                    <p>4. SECURITY: cashforproperty.ae takes appropriate steps to ensure data privacy and security
+                        including through various hardware and software methodologies. However, cashforproperty.ae
                         cannot guarantee the security of any information that is disclosed online.</p>
-                    <p>5. OTHER WEBSITES: thepropertybuyingcompany.ae is not responsible for the privacy policies of websites
+                    <p>5. OTHER WEBSITES: cashforproperty.ae is not responsible for the privacy policies of websites
                         to which it links. If you provide any information to such third parties, different rules regarding
                         the collection and use of your personal information may apply. We strongly suggest you review such
                         third party’s privacy policies before providing any data to them. We are not responsible for the
@@ -49,14 +49,14 @@
                         own cookies or clear GIFs to users, collect data or solicit personally identifiable information.
                         We cannot control this collection of information. You should contact these entities directly if you
                         have any questions about their use of the information that they collect.</p>
-                    <p>6. MINORS: thepropertybuyingcompany.ae does not knowingly collect personal information from minors under
-                        the age of 18. Minors are not permitted to use the thepropertybuyingcompany.ae website or services,
-                        and thepropertybuyingcompany.ae requests that minors under the age of 18 not submit any personal
+                    <p>6. MINORS: cashforproperty.ae does not knowingly collect personal information from minors under
+                        the age of 18. Minors are not permitted to use the cashforproperty.ae website or services,
+                        and cashforproperty.ae requests that minors under the age of 18 not submit any personal
                         information to the website. Since information regarding minors under the age of 18 is not collected,
-                        thepropertybuyingcompany.ae does not knowingly distribute personal information regarding minors under
+                        cashforproperty.ae does not knowingly distribute personal information regarding minors under
                         the age of 18.</p>
-                    <p>7. CORRECTIONS AND UPDATES: If you wish to modify or update any information thepropertybuyingcompany.ae
-                        has received, please contact info@thepropertybuyingcompany.ae.</p>
+                    <p>7. CORRECTIONS AND UPDATES: If you wish to modify or update any information cashforproperty.ae
+                        has received, please contact info@cashforproperty.ae.</p>
                     <p>8. MODIFICATIONS OF THE PRIVACY POLICY: The Website Policies and Terms &amp; Conditions would be changed
                         or updated occasionally to meet the requirements and standards. Therefore the Customers’ are encouraged
                         to frequently visit these sections in order to be updated about the changes on the website. Modifications
