--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -5,8 +5,8 @@
             <div data-depth="0.00"><img class="img-responsive" src="http://res.cloudinary.com/razrlab/image/upload/v1501401289/background_aiwdpp.png"></div>
             <div data-depth="0.10"><img class="img-responsive" src="http://res.cloudinary.com/razrlab/image/upload/v1501401238/shadow2_jt6akg.png"></div>
             <div data-depth="0.25"><img class="img-responsive" src="http://res.cloudinary.com/razrlab/image/upload/v1501401238/shadow1_yvsair.png"></div>
-            <div data-depth="0.00"><img class="img-responsive" src="/img/buildings.png"></div>
-            <div data-depth="0.70"><img class="img-responsive" src="/img/clouds.png"></div>
+            <div data-depth="0.00"><img class="img-responsive" src="http://res.cloudinary.com/the-property-buying-company/image/upload/v1501751561/buildings_mb0nyg.png"></div>
+            <div data-depth="0.70"><img class="img-responsive" src="http://res.cloudinary.com/the-property-buying-company/image/upload/v1501751563/clouds_dwz1yk.png"></div>
         </div>
     </div>
 
