--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -87,7 +87,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="info-box__item">
-                            <img class="img-responsive" src="img/O9IY331.png" alt="" width="300" height="300">
+                            <img class="img-responsive" src="img/nofees.png" alt="" width="300" height="300">
 
                             <h3>No Fees Whatsoever</h3>
                             <p>Selling your property can be a costly affair. At Cash For Property, we understand this
@@ -150,7 +150,7 @@
             <!-- cd-timeline-block -->
 
             <div class="cd-timeline-block">
-                <div class="cd-timeline-img cd-movie">
+                <div class="cd-timeline-img cd-picture">
                     <img src="img/clock.png">
                 </div>
                 <!-- cd-timeline-img -->
@@ -255,7 +255,7 @@
                 <div class="cd-timeline-content">
                     <div row="row">
                         <div class="col-sm-4">
-                            <img class="img-responsive" src="img/moneylost.png" alt="" width="200" height="200">
+                            <img class="img-responsive" src="img/stealing.png" alt="" width="200" height="200">
                         </div>
                         <div class="col-sm-7">
                             <h2>Net in your pocket AED 751,000</h2>
