--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -87,7 +87,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="info-box__item">
-                            <img class="img-responsive" src="img/nofees.png" alt="" width="300" height="300">
+                            <img class="img-responsive" src="img/nofees.png" alt="" height="300">
 
                             <h3>No Fees Whatsoever</h3>
                             <p>Selling your property can be a costly affair. At Cash For Property, we understand this
@@ -98,7 +98,7 @@
 
                     <div class="col-sm-4">
                         <div class="info-box__item">
-                            <img class="img-responsive" src="img/OIHEI81.png" alt="" width="300" height="300">
+                            <img class="img-responsive" src="img/OIHEI81.png" alt=""  height="300">
 
                             <h3>Flexible Timeline</h3>
                             <p>The timetable for the transaction will be set according to your convenience and needs. This way,
@@ -108,7 +108,7 @@
 
                     <div class="col-sm-4">
                         <div class="info-box__item">
-                            <img class="img-responsive" src="img/OAI50P1.png" alt="" width="300" height="300">
+                            <img class="img-responsive" src="img/OAI50P1.png" alt="" height="300">
 
                             <h3>Best Price to Time Ratio</h3>
                             <p>Cash For Property understands that time is money too. This is factored in the price
