--- a/public/src/tnc/tnc.html
+++ b/public/src/tnc/tnc.html
@@ -6,16 +6,16 @@
                     <h2>Terms &amp; Conditions</h2>
                 </div>
                 <div class="card__body">
-                    <p>The Property Buying Company offers usually follow the average timescale of 2 – 3 Weeks. However, in some
+                    <p>C offers usually follow the average timescale of 2 – 3 Weeks. However, in some
                         cases, we have completed the transaction within 7 days. </p>
 
-                    <p>The Property Buying Company reserves the right to have a certified valuation conducted on your property.
+                    <p>Cash For Property reserves the right to have a certified valuation conducted on your property.
                         </p>
 
-                    <p>The Property Buying Company reserves the right to seek additional reports, certificates, prior to concluding
+                    <p>Cash For Property reserves the right to seek additional reports, certificates, prior to concluding
                         the transaction. </p>
 
-                    <p>The offer made by The Property Buying Company may not always be market price. Our offer depends on property
+                    <p>The offer made by Cash For Property may not always be market price. Our offer depends on property
                         type, condition, age, etc. It is important to note here that time saved and headache-free experience
                         in selling your property is very significant. </p>
 
@@ -23,7 +23,7 @@
                         condition – structural or otherwise. </p>
 
                     <p>Unless we are legally bound by a court order, all information about you, your transaction and any other
-                        information we may have through your interaction with The Property Buying Company, we will not release
+                        information we may have through your interaction with Cash For Property, we will not release
                         or misuse this information without your express consent. </p>
 
 
@@ -33,7 +33,7 @@
                         </p>
 
                     <p>Our offers are based on an analysis of recent transactions registered with the land registrars in the
-                        respective emirates. The Property Buying Company will take into consideration the upkeep of your
+                        respective emirates. Cash For Property will take into consideration the upkeep of your
                         property as well as the community. </p>
 
                     <p>If the agreement is terminated within the Agreement term by the seller, the seller agrees to a penalty of 10% of the offered price. </p>
