--- a/public/src/tnc/tnc.html
+++ b/public/src/tnc/tnc.html
@@ -6,7 +6,7 @@
                     <h2>Terms &amp; Conditions</h2>
                 </div>
                 <div class="card__body">
-                    <p>C offers usually follow the average timescale of 2 – 3 Weeks. However, in some
+                    <p>Cash For Property offers usually follow the average timescale of 2 – 3 Weeks. However, in some
                         cases, we have completed the transaction within 7 days. </p>
 
                     <p>Cash For Property reserves the right to have a certified valuation conducted on your property.
