--- a/public/src/app-header/app-header.html
+++ b/public/src/app-header/app-header.html
@@ -133,7 +133,7 @@
                             </div>
                             <div class="col-sm-9 col-xs-9">
                                 <img src="/img/logo.png" width="250" class="img-responsive">
-                                <span>This is a placeholder for the logo</span>
+                                <span>A portal to sell your property quickly!</span>
                             </div>
                         </div>
                     </div>
